frontend/test/should_fail/index_count_edge_missing_where_index_expected.grg
#using "index_count_edge_model.gm"

rule i(ref s:set<enu>) {
	if{ countEdgesFromIndex(s) > 0; }
	
	modify {
	}
}
